@@ -330,6 +330,9 @@ this. Was used when mwEmbed was going to be an extension.
 * The display of the language list on the preferences is more comply with the 
   BCP 47 standards.
 * (bug 19849) Custom X-Vary-Options header now disabled unless $wgUseXVO is set
+* (bug 19301) Duplicates entries in $wgAddGroups, $wgRemoveGroups,
+  $wgGroupsAddToSelf and $wgGroupsRemoveFromSelf are no more displayed on
+  Special:ListGroupRights
 
 == API changes in 1.16 ==
 
